tests/type-error/TypeMismatch.vix
data Bool where
  False : Bool
  True : Bool

the : (a : Type) -> a -> a
the _ x = x

test = addSize (the Bool True) 1
